<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.SettingsPage">


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/title_margin_top"
        android:layout_marginBottom="@dimen/title_margin_bottom"
        android:text="@string/title_settings"
        android:textSize="@dimen/title"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/title_layout"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_card"
        android:layout_below="@+id/title"
        android:padding="10dp"
        android:layout_marginTop="100dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/theme_toggle_title"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="end"
            android:text="@string/theme_mode_toggle_title"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/theme_toggle"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/theme_toggle_title"
            android:entries="@array/spinner_items" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="70dp"
        android:layout_below="@+id/title_layout">

        <Button
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/logout" />

        <ImageView
            android:id="@+id/taskbud_stand_rx"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="40dp"
            android:layout_toEndOf="@+id/logout"
            android:src="@drawable/taskbud_stand_rx" />

    </RelativeLayout>

</RelativeLayout>