<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/select_photo"
        android:textSize="25dp" />

    <ImageView
        android:id="@+id/profile_pic"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/default_profile_pic" />


    <RelativeLayout
        android:layout_marginTop="30dp"
        android:id="@+id/select_source"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_pic"
        android:layout_centerHorizontal="true">

        <ImageView
            android:id="@+id/select_camera"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginEnd="80dp"
            android:contentDescription="Take photo from camera"
            android:src="@drawable/camera_icon" />

        <ImageView
            android:id="@+id/select_gallery"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_toEndOf="@+id/select_camera"
            android:contentDescription="Take photo from gallery"
            android:src="@drawable/gallery_icon" />


        <TextView
            android:id="@+id/text_view_camera"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/select_camera"
            android:layout_marginEnd="80dp"
            android:gravity="center"
            android:text="Camera" />


        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/text_view_camera"
            android:layout_below="@+id/select_gallery"
            android:gravity="center"
            android:text="Gallery"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/select_source"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/confirm"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/confirm" />

    </LinearLayout>

</RelativeLayout>